# Project-Tactics

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTE.md  DESIGNREFERENCE.md  LICENSE  README.md
resources/: CMakeLists.txt
resources/OpenTactica/: CMakeLists.txt
resources/OpenTacticaPrototype/: CMakeLists.txt
resources/OpenTacticaPrototype/data/: default_config.ini  engine_data.json
resources/OpenTacticaPrototype/data/common/: resources.json
resources/OpenTacticaPrototype/data/game/: resources.json
resources/Samples/: CMakeLists.txt
resources/Samples/data/: default_config.ini
resources/data/: defaultConfig.ini  default_config.ini  engine_data.json  engine_res.lua  game_data.json  game_res.lua  resources.lua
resources/data/_demoMaps/: char_shadow.prefab  character.prefab  mapCamera.prefab  resources.lua
resources/data/_demoSimple/: resources.json  rotateAroundCamera.prefab  testPlane.prefab
resources/data/_demoSprites/: character.prefab  resources.json  spriteCamera.prefab
resources/data/common/: resources.json
resources/data/dev/: defaultDevConfig.ini  default_dev_config.ini  imgui_settings.ini
resources/data/meshes/: battlemap.fbx  book.fbx  map.fbx  map04.fbx  map1.fbx
resources/data/prefabs/: map00.prefab  map01.prefab  map02.prefab  map04.prefab  mapCamera.prefab  simpleRotatingQuad.prefab
resources/data/resource_definitions/: game_data.json  map_resources_data.lua
resources/data/shaders/: main.frag  shader_definition.lua  texturedUnlit.frag
resources/data/textures/: texture_definition.lua
resources/src/: CharSheetTest.psd  OpenTacticaLogo.psd
resources/src/docs/: Project Structure.drawio
src/Apps/OpenTactica/: CMakeLists.txt  OpenTacticaApplication.cpp  OpenTacticaApplication.h  main.cpp
src/Apps/OpenTactica/States/: DemoState.cpp  (+17 more)
src/Apps/ProjectTactics/: BattlegroundApplication.cpp  BattlegroundApplication.h  CMakeLists.txt  ProjectTacticsMain.cpp
src/Apps/ProjectTactics_UnitTests/: CMakeLists.txt
src/Apps/Samples/: CMakeLists.txt  SamplesApplication.cpp  SamplesApplication.h  SamplesUtils.h  main.cpp
src/Apps/TacticsEngine_UnitTests/: CMakeLists.txt  UnitTestMain.cpp
src/Engine/: CMakeLists.txt
src/Engine/Application/: Application.cpp  Application.h  CMakeLists.txt
src/Engine/Core/: Application.h  CMakeLists.txt  DefaultFsmExternalController.cpp  DefaultFsmExternalController.h  Engine.cpp  Engine.h  ResourceSystemInitializer.cpp  ResourceSystemInitializer.h
src/Engine/ECS/: CMakeLists.txt  EcsSystem.cpp  EcsSystem.h
src/Engine/Overlay/: CMakeLists.txt  CustomOverlayColors.cpp  CustomOverlayColors.h  EngineCoreOverlay.cpp  EngineCoreOverlay.h  FsmOverlay.cpp  FsmOverlay.h  InputOverlay.cpp  InputOverlay.h  RenderingOverlay.cpp  RenderingOverlay.h  ResourceOverlayHelper.cpp  ResourceOverlayHelper.h  ResourcesOverlay.cpp  ResourcesOverlay.h
src/Engine/Rendering/: CMakeLists.txt  Camera.cpp  Camera.h  DebugMessageHandler.cpp  RenderQueue.cpp  RenderQueue.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  Viewport.cpp  Viewport.h
src/Engine/Resource/: CMakeLists.txt  Resource.cpp  ResourceManager.h  ResourcePathHelper.cpp  ResourceSystem.cpp  ResourceSystem.h  ResourceSystemInitializer.cpp  ResourceSystemInitializer.h
src/Engine/Resources/: CMakeLists.txt  Resource.h  ResourceSystem.cpp  ResourceSystem.h  ShaderLoader.cpp  ShaderLoader.h  ShaderResource.h
src/Engine/Scene/: CMakeLists.txt  Scene.h  SceneSystem.cpp  SceneSystem.h
src/Libs/: CMakeLists.txt
src/Libs/Ecs/: CMakeLists.txt  Entity.cpp  Entity.h  Entity.inl  EntityComponentSystem.cpp  EntityComponentSystem.h  EntityUtilities.cpp  EntityUtilities.h  PrefabManager.cpp  PrefabManager.h
src/Libs/Event/: CMakeLists.txt  EventsListener.cpp  EventsListener.h  EventsSystem.cpp  EventsSystem.h
src/Libs/Events/: CMakeLists.txt  EventsListener.cpp  EventsListener.h  EventsSystem.cpp  EventsSystem.h
src/Libs/FileSystem/: CMakeLists.txt  FileLoader.cpp  FileLoader.h  FileSystem.cpp  FileSystem.h  PathHelper.cpp  PathHelper.h
src/Libs/Fsm/: CMakeLists.txt  Fsm.cpp  Fsm.h  FsmAction.cpp  FsmAction.h  FsmBuilder.cpp  FsmBuilder.h  FsmEventListener.cpp  FsmEventListener.h  FsmExternalController.h  FsmState.h  FsmStateWithServices.h  FsmTypes.h
src/Libs/Input/: CMakeLists.txt  InputSerialization.cpp  InputSerialization.h  InputSystem.cpp  InputSystem.h  InputTypes.h
src/Libs/Overlay/: CMakeLists.txt  ExampleOverlay.cpp  ExampleOverlay.h  MainOverlay.cpp  MainOverlay.h  Overlay.h  OverlayStyleHelper.cpp  OverlayStyleHelper.h  OverlaySystem.cpp  OverlaySystem.h  OverlayTypes.h  ScriptedOverlay.cpp  ScriptedOverlay.h
src/Libs/Physics/: CMakeLists.txt  JoltConstants.h  JoltConversion.h  JoltTraceAssert.h  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsSystemPimpl.cpp  PhysicsSystemPimpl.h  PhysicsTypes.h
src/Libs/Rendering/: BaseBuffer.h  CMakeLists.txt  DebugMessageHandler.cpp  DebugMessageHandler.h  GeometryBuilder.cpp  GeometryBuilder.h  IndexBuffer.cpp  IndexBuffer.h  QuadBuffers.h  RenderQueue.cpp  RenderQueue.h  RenderSystem.cpp  RenderSystem.h  VertexAttributes.cpp  VertexAttributes.h  VertexBuffer.cpp  VertexBuffer.h  VertexDefinition.cpp  VertexDefinition.h  Viewport.h
src/Libs/Resource/: CMakeLists.txt  Resource.cpp  Resource.h  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  ResourcePathHelper.cpp  ResourcePathHelper.h  ResourceProvider.h  ResourceSerialization.cpp  ResourceSerialization.h  ResourceSystem.cpp  ResourceSystem.h
src/Libs/Scripting/: CMakeLists.txt  ScriptingHelper.cpp  ScriptingHelper.h
src/Libs/TestLib/: CMakeLists.txt  TestLibFile.h
src/Libs/Ui/: CMakeLists.txt  UiSystem.cpp  UiSystem.h
src/Libs/Utilities/: CMakeLists.txt  ClassId.h  Color.h  Math.cpp  Math.h  TransparentTypes.h  UUID.cpp
src/Libs/Utility/: CMakeLists.txt  ClassId.h  Color.cpp  Color.h  Exception.h  HashId.cpp  HashId.h  HashString.cpp  HashString.h  ImGuiUtilities.cpp  ImGuiUtilities.h  Math.cpp  Math.h  Random.cpp  Random.h  Reflection.h  String.cpp  String.h  TransparentTypes.h  UUID.h
(+407 files in other folders)
